6.3.4 beta